@@ -7,16 +7,15 @@ import java.nio.file.FileSystem;
 import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
 
 public record ResolveResource(Path assetRoot, Path artefactRoot, Optional<Path> testsRoot, FileSystem virtualFs) {
   static private final ResolveResource instance= 
-    //ResolveResource.infer(Path.of(""));
-    ResolveResource.infer(Paths.get("C:/")
-      .resolve("Users/sonta/Documents/GitHub/Fearless/compiler"));
+    ResolveResource.infer(Path.of(""));
+//    ResolveResource.infer(Paths.get("C:/")
+//      .resolve("Users/sonta/Documents/GitHub/Fearless/compiler"));
   //Infer works if we put the two data folders in the class path
 
   public ResolveResource{
